--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <body>
     <header>
       <h1>Find your film</h1>
-      <a href="#">My Watchlist</a>
+      <a id="my-watchlist">My Watchlist</a>
     </header>
     <form action="">
-      <input type="text" placeholder="Search for a movie" />
-      <button type="submit">Search</button>
+      <input id="movie-title" type="text" placeholder="Search for a movie" />
+      <button id="submit-btn" type="button">Search</button>
     </form>
-    <main>
+    <main id="main">
       <img class="explore-img" src="images/no-data-initial.png" alt="" />
     </main>
+    <script src="script.js" type="module""></script>
   </body>
 </html>
