--- a/watch_list.html
+++ b/watch_list.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>My Watchlist</h1>
-      <a id="search-movies" href="index.html">Search for movies</a>
+      <a id="search-movies">Search for movies</a>
     </header>
     <main id="main">
       <div class="watchlist-msg">
