--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
   <body>
     <header>
       <h1>Find your film</h1>
-      <a id="my-watchlist">My Watchlist</a>
+      <a id="my-watchlist" href="#" role="button">My Watchlist</a>
     </header>
+
     <form action="">
       <input id="movie-title" type="text" placeholder="Search for a movie" />
       <button id="submit-btn" type="button">Search</button>
     </form>
+
     <main id="main">
-      <img class="explore-img" src="images/no-data-initial.png" alt="" />
+      <img class="explore-img" src="images/no-data-initial.png" alt="No data" />
     </main>
-    <script src="script.js" type="module""></script>
+
+    <script src="script.js" type="module"></script>
   </body>
 </html>
